# ground_truth_sim

./: .gitignore  .gitmodules  README.md  frames_2026-03-11_14.47.44.gv
docs/: fusion_test_guide.md  sim_validation_guide.md  usv_fusion_new_guide.md
install/: local_setup.sh  setup.sh
install/ground_truth_sim/share/ground_truth_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ground_truth_sim/share/ground_truth_sim/config/: ground_truth_params.yaml  range_overlay_params.yaml  three_sensor_overlay_params.yaml
install/ground_truth_sim/share/ground_truth_sim/launch/: full_stack_sim.launch.py  ground_truth_sim.launch.py
install/ground_truth_sim/share/ground_truth_sim/rviz/: three_sensor_fusion_view.rviz
install/percision_sim/share/percision_sim/: README.md  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/percision_sim/share/percision_sim/config/: multi_sensor_params.yaml  percision_sim_params.yaml
install/percision_sim/share/percision_sim/launch/: sensors_sim.launch.py
install/usv_interfaces/share/usv_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/usv_interfaces/share/usv_interfaces/action/: ExecuteMission.action  ExecuteMission.idl
install/usv_interfaces/share/usv_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_usv_interfaces__rosidl_generator_cExport-noconfig.cmake  export_usv_interfaces__rosidl_generator_cppExport.cmake  export_usv_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_usv_interfaces__rosidl_generator_pyExport.cmake  export_usv_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_usv_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  usv_interfacesConfig-version.cmake  usv_interfacesConfig.cmake  usv_interfaces__rosidl_typesupport_cExport.cmake  usv_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  usv_interfaces__rosidl_typesupport_cppExport.cmake  usv_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  usv_interfaces__rosidl_typesupport_introspection_cExport.cmake  usv_interfaces__rosidl_typesupport_introspection_cppExport.cmake
install/usv_interfaces/share/usv_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/usv_interfaces/share/usv_interfaces/msg/: AISTrack.idl  AISTrack.msg  AISTrackArray.idl  AISTrackArray.msg  ControlDeviation.idl  ControlDeviation.msg  FusedSceneSnapshot.idl  FusedTargetCatalog.idl  FusedTargetSnapshot.idl  FusedTrackSample.msg  GlobalTrack.idl  GlobalTrack.msg  GlobalTrackArray.idl  GlobalTrackArray.msg  MmwaveTarget.idl  MmwaveTarget.msg  MmwaveTargetArray.idl  MmwaveTargetArray.msg  NavRadarTarget.idl  NavRadarTarget.msg  NavRadarTargetArray.idl  NavRadarTargetArray.msg  OperationMode.idl  OperationMode.msg  VesselState.idl  VesselState.msg  VisionDetection.idl  VisionDetection.msg  VisionDetectionArray.idl  VisionDetectionArray.msg
install/usv_interfaces/share/usv_interfaces/srv/: ControlDevice.idl  ControlDevice.srv  ControlDevice_Request.msg  ControlDevice_Response.msg  GetTargetHistory.idl  GetTargetHistory_Response.msg
log/: latest_build
scripts/: run_full_sim.sh  run_multi_sensor_sim.sh  verify_sim_health.sh
src/percision_sim/: README.md  setup.cfg  setup.py
src/percision_sim/config/: multi_sensor_params.yaml  percision_sim_params.yaml  three_vision_one_mmwave_params.yaml
src/percision_sim/launch/: multi_sensor_sim.launch.py  three_sensor_sim.launch.py
src/percision_sim/mmwave_radar/: README.md  原版_使用说明.md
src/percision_sim/mmwave_radar/src/ra223f_pkg/: CMakeLists.txt  README.md  package.xml
src/percision_sim/mmwave_radar/src/ra223f_pkg/config/: mmw_radar_params.yaml
src/percision_sim/mmwave_radar/src/ra223f_pkg/launch/: launch.py
src/percision_sim/mmwave_radar/src/ra223f_pkg/src/: ra223f_node.cpp  udp_interface.cpp  udp_interface.h
src/percision_sim/percision_sim/: sim_mmwave_node.py  sim_vision_node.py
src/percision_sim/resource/: percision_sim
src/sim/: README.md  setup.cfg  setup.py
src/sim/config/: ground_truth_params.yaml
src/sim/ground_truth_sim/: __init__.py  range_overlay_node.py
src/sim/launch/: ground_truth_sim.launch.py  three_sensor_fusion_sim.launch.py
src/sim/rviz/: ground_truth_only.rviz  ground_truth_view.rviz
src/usv_event_fusion/: README.md  package.xml  setup.cfg  setup.py
src/usv_event_fusion/config/: event_fusion_algorithm.yaml  event_fusion_io.yaml  event_fusion_three_sensor_io.yaml
src/usv_event_fusion/docs/: usv_event_fusion_algorithm_reference.md
src/usv_event_fusion/reference/: compare.md  contract.md  fusion_pipeline.md  topic.md
src/usv_event_fusion/test/: test_polar_and_metrics.py  test_predict_lifecycle.py  test_track_merge.py  test_track_uuid.py
src/usv_event_fusion/usv_event_fusion/: filters.py  fusion_diagnostics.py  sensor_models.py  track_uuid.py
src/usv_fusion/: README.md  package.xml  setup.cfg  setup.py
src/usv_fusion/config/: fusion_params.yaml
src/usv_fusion/usv_fusion/: __init__.py  history_io.py  sensor_fusion_node.py  vision_cluster.py
src/usv_fusion_new/: package.xml  setup.cfg  setup.py
src/usv_fusion_new/install/: local_setup.sh  setup.sh
src/usv_fusion_new/log/: latest_build
src/usv_fusion_new/usv_fusion_new/: global_tracker.py
src/usv_interfaces/: CMakeLists.txt  README.md  package.xml
src/usv_interfaces/include/usv_interfaces/: topics.hpp
src/usv_interfaces/msg/: AISTrackArray.msg  ControlDeviation.msg  VisionDetection.msg
src/usv_interfaces/srv/: GetTargetHistory.srv
src/usv_interfaces/usv_interfaces/: topics.py
src/usv_interfaces_backup/msg/: FusedSceneSnapshot.msg  NavRadarTarget.msg  (+7 more)
(+356 files in other folders)
