<?xml version="1.0"?>
<package format="3">
  <name>usv_event_fusion</name>
  <version>0.1.0</version>
  <description>Event-driven vision/mmWave fusion with a single global track table (mutex-protected).</description>
  <maintainer email="usv@example.com">USV Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>usv_interfaces</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
