<?xml version="1.0"?>
<package format="3">
  <name>percision_sim</name>
  <version>0.1.0</version>
  <description>Simulated vision detections derived from USV ground-truth tracks.</description>
  <maintainer email="usv@example.com">USV Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>python3-numpy</depend>
  <depend>rclpy</depend>
  <depend>visualization_msgs</depend>
  <depend>usv_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
