<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usv_interfaces</name>
  <version>0.1.0</version>
  <description>Standard interfaces and constants for USV control system</description>
  <maintainer email="developer@usv.com">USV Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend> <!-- 新增: 支持Python模块安装 -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>sensor_msgs</depend> <!-- 新增: 明确依赖 sensor_msgs -->
  <depend>nav_msgs</depend> <!-- 新增: 用于Odometry消息 -->
  <depend>unique_identifier_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
